--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fs": "^0.0.1-security",
+    "install": "^0.13.0",
     "lucide-react": "^0.536.0",
-    "next": "14.2.31",
+    "next": "^14.2.31",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "npm": "^11.5.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
