--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.3.0",
     "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "lucide-react": "^0.536.0",
