--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "lucide-react": "^0.536.0",
