--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "diff": "^8.0.2",
     "firebase": "^12.3.0",
     "firebase-admin": "^13.5.0",
     "fs": "^0.0.1-security",
