--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "npm": "^11.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
     "recharts": "^2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles-slim": "^2.12.0",
